# Fintelligence-dashboard-Jatayu-virtusa-

./: .env.example  .gitignore  NEON_DB_SETUP.md  README.md  README_WINDOWS.md  ai_processor.py  ai_processor_minimal.py  ai_processor_new.py  ai_processor_real.py  ai_processor_simple.py  app.py  check_env.py  check_gemini_api.py  create_windows_db.py  demo_app.py  demonstration.html  file_processor.py  financial_data_processor.py  fix_app_startup.py  fix_chatbot.py  fix_file_upload.py  forms.py  list_models.py  local_response_demo.py  models.py  openai_processor.py  openai_setup.py  pdf_generator.py  pyproject.toml  requirements_local.txt  routes.py  run_locally.py  setup_windows.py  test_api_key.py  utils.py
attached_assets/: Pasted--File-D-FinancialIntelligence-venv-Lib-site-packages-sqlalchemy-sql-schema-py-line-5925-in-cre-1746885193496.txt  Pasted--venv-PS-D-FinancialIntelligence-python-main-py-Loaded-environment-variables-from-env-file-INF-1747030989804.txt  Pasted--venv-PS-D-FinancialIntelligenceDONOTDELETE-env-GEMINI-API-KEY-AIzaSyA0IfrB5V9aBq3phOvDhl-mbF-y-1747053854300.txt  Pasted-Comprehensive-AI-generated-financial-analysis-with-insights-and-recommendations-Generated-on-20-1745871888945.txt  Pasted-FileNotFoundError-FileNotFoundError-Errno-2-No-such-file-or-directory-tmp-Updated-Realistic--1746813548118.txt  Pasted-FileNotFoundError-FileNotFoundError-Errno-2-No-such-file-or-directory-tmp-Updated-Realistic--1746883587862.txt  Pasted-Microsoft-Windows-Version-10-0-22631-4890-c-Microsoft-Corporation-All-rights-reserved-D-F-1745900864212.txt  (+4 more)
static/js/: chat.js  (+3 more)
(+31 files in other folders)
