[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "google-generativeai>=0.8.5",
    "anthropic>=0.50.0",
    "xhtml2pdf>=0.2.17",
    "pytz>=2025.2",
]
